--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ p {font-family:Georgia, serif;font-size:14px;font-style:normal;font-weight:norma
 </style>
 </head>
 <body>
-<h1>Dunya Corp</h1>
-<p>Dunya Corp - Coming Soon!</p>
+<h1>BrickCity Cloud</h1>
+<p>BrickCity Cloud - Coming Soon!</p>
 </body>
 </html>
